📦 NEW: Background gradient and photo alignment fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -23,7 +23,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Noto Serif', serif;
 }
 .home{
-  color: var(--quaternary-color);
+  color: white;
   font-size: 12px;
 }
 body {
@@ -33,7 +33,8 @@ body {
   position: absolute;
   width: 100%;
   height: 100vh;
-  background-color: var(--primary-color);
+  /* background-color: var(--quaternary-color); */
+  background: linear-gradient(166deg, rgba(45,52,54,1) 0%, rgba(35,25,85,1) 0%, rgba(2,2,8,1) 86%);
   background-repeat: no-repeat;
   background-size: cover;
   overflow: hidden;
@@ -84,7 +85,7 @@ a:hover{
   font-size: 1.4em;
 }
 .bio{
-  font-size: 1.2em;
+  font-size: 1.5em;
 }
 .disclaimer{
   font-size: 1em;
@@ -92,6 +93,8 @@ a:hover{
 }
 .disclaimer span{
   text-decoration: underline;
+  color: var(--quaternary-color);
+
 }
 .social-icons img{
   width: 27px;
@@ -103,6 +106,7 @@ a:hover{
 }
 .bio p span{
   text-decoration: underline;
+  color: var(--quaternary-color);
 }
 .tradingview{
   width: 38px !important;
@@ -114,10 +118,16 @@ a:hover{
     width: 80vw !important;
     height: 80vh !important;
   }
+  .bio{
+    font-size: 1.2em;
+  }
 }
 
 @media (min-height:700px){
   .info-card{
     height: 600px !important;
+  }
+  .bio{
+    font-size: 1.3em;
   }
 }
